--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
             height: 100%;
             background: #000;
             z-index: 9999;
+            color: #00b3ff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            font-size: 24px;
+            text-align: center;
         }
 
         .loading-text {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            margin: auto;
-            text-align: center;
-            width: 100%;
-            height: 100px;
-            line-height: 100px;
+            font-size: 36px;
+            color: #00b3ff;
+            font-family: 'Quattrocento Sans', sans-serif;
         }
 
         .loading-text span {
@@ -115,8 +115,10 @@
 
 <body>
 
+    <!-- Loading Screen -->
     <div class="loading" id="loading">
         <div class="loading-text">
+            <span>TEAMROHITOFFICAL45_LIVE</span><br>
             <span>Loading...</span><span>...</span><span>...</span><span>...</span><span>...</span><span>...</span><span>...</span>
         </div>
     </div>
@@ -131,12 +133,16 @@
         var urlParams = new URLSearchParams(window.location.search),
             maxvalue = urlParams.get("id");
 
+        // If no valid source URL is provided, prevent errors
         if (maxvalue) {
             document.getElementById("m3u8-url").setAttribute("src", maxvalue);
         } else {
             console.error("No video URL provided!");
+            // Hide the player or show an error message if needed
+            document.getElementById('loading').innerHTML = '<div class="loading-text"><span>Error: Video source not available.</span></div>';
         }
 
+        // Hide the loading screen after the video starts
         setTimeout(videovisible, 1000);
 
         function videovisible() {
@@ -153,7 +159,9 @@
                     maxMaxBufferLength: 100,
                 };
                 const t = new Hls(config);
-                t.loadSource(n), t.on(Hls.Events.MANIFEST_PARSED, function (n, l) {
+                t.loadSource(n);
+
+                t.on(Hls.Events.MANIFEST_PARSED, function (n, l) {
                     const s = t.levels.map(e => e.height);
                     o.quality = {
                         default: s[0],
@@ -168,8 +176,15 @@
                     new Plyr(e, o);
                 });
 
+                t.on(Hls.Events.ERROR, function (event, data) {
+                    // Handle errors related to HLS.js
+                    console.error("HLS.js error: ", data);
+                    document.getElementById('loading').innerHTML = '<div class="loading-text"><span>Error loading video.</span></div>';
+                });
+
                 t.attachMedia(e), window.hls = t;
             } else {
+                // If HLS.js isn't supported, use Plyr directly
                 new Plyr(e, o);
             }
         });
